tests/ui_board/snapshots/snapshots/ui_board__snapshots__footer_visibility__hidden_optional_footer_reclaims_every_optional_row_in_board_compose_and_edit.snap
---
source: tests/ui_board/snapshots/footer_visibility.rs
assertion_line: 30
expression: "snapshot(&mut fixture, 42, 12, ThemePreference::Dark)"
---
SIZE 42x12

TEXT
00││
01│⋮ wide 界  é control � content│
02││
03││
04││
05││
06││
07││
08││
09││
10││
11││

STYLE RUNS
0: 0-41 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
1: 0-0 fg=Rgb(250, 250, 248) bg=Rgb(45, 106, 79) mod=BOLD | 1-7 fg=Rgb(232, 228, 223) bg=Rgb(39, 40, 48) mod=NONE | 8-8 fg=Reset bg=Reset mod=NONE | 9-41 fg=Rgb(232, 228, 223) bg=Rgb(39, 40, 48) mod=NONE
2: 0-41 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
3: 0-41 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
4: 0-41 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
5: 0-41 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
6: 0-41 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
7: 0-41 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
8: 0-41 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
9: 0-41 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
10: 0-41 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
11: 0-41 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
