tests/ui_board/snapshots/snapshots/ui_board__snapshots__footer_visibility__runtime_toggle_reclaims_geometry_without_stale_hits_and_restarts_from_configuration.snap
---
source: tests/ui_board/snapshots/footer_visibility.rs
assertion_line: 107
expression: "snapshot(&mut fixture, area.width, area.height, ThemePreference::Dark)"
---
SIZE 42x12

TEXT
00││
01│  board toggle seed│
02│  ────────────────────────────────────────│
03││
04│⋮ runtime footer owner│
05││
06│               + New thought│
07││
08││
09│  proqi-ui-contract│
10│  2 thoughts · board · saved│
11│  n New   : Commands  ? Shortcuts│

STYLE RUNS
0: 0-41 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
1: 0-0 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 1-41 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
2: 0-1 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 2-41 fg=Rgb(42, 37, 32) bg=Rgb(15, 13, 10) mod=NONE
3: 0-41 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
4: 0-0 fg=Rgb(250, 250, 248) bg=Rgb(45, 106, 79) mod=BOLD | 1-41 fg=Rgb(232, 228, 223) bg=Rgb(39, 40, 48) mod=NONE
5: 0-41 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
6: 0-14 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 15-15 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 16-41 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
7: 0-41 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
8: 0-41 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
9: 0-41 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
10: 0-1 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 2-39 fg=Rgb(176, 169, 160) bg=Rgb(15, 13, 10) mod=NONE | 40-41 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
11: 0-1 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 2-2 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 3-9 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 10-10 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 11-21 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 22-22 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 23-41 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
